--- a/README
+++ b/README
@@ -1,12 +1,15 @@
+
 # MY RESTful service starter project using Spring boot
 
-Target:
-Spring boot
-Swagger
-JPA
-PostgresQL
-Config
-Unit test, Covering test
-Migration & seeder
-Docker
-Docker-compose
+
+## Target:
+
+|Spring boot| Done |
+|Swagger| Done|
+|JPA| - |
+|PostgresQL| - |
+|Config| - |
+|Unit test, Covering test| - |
+|Migration & seeder| - |
+|Docker| - |
+|Docker-compose| - |
